css/styles.css
html {
  height: 100%;
  width: 100%;
}
body {
  overflow-x: hidden;
  height: 100%;
}
.navLinks {
  display: flex;
  margin-left: 3%;
  /* justify-content: end; */
}
.social {
  margin-left: 74%;
}
/* 
********
Banner**
********
 */
.banner {
  background-image: url(../img/tim-gouw-124468-unsplash.jpg);
  background-size: cover;
  background-position: center;
  color: orange;
  height: 400px;
}
.bannerText {
  padding-top: 5%;
  margin-left: 5%;
  text-align: left;
}
/* 
********
Content*
********
 */
.breakSection {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  padding: 5%;
}
.breakExp {
  border-right: 1px solid black;
}
.imgDivider {
  background-image: url(../img/ashton-clark-424090-unsplash.jpg);
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  position: relative;
  height: 300px;
  color: black;
  text-align: center;
  padding-top: 6%;
}
.videoSection {
  display: flex;
  justify-content: space-around;
  height: 100%;
  padding: 20px;
}

